chore - update to run locally in vaadin production mode